--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -8,6 +8,48 @@ body {
 }
 
 
+.loader-positioning {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 85vh;
+}
+
+
+.hyperlink-dec {
+  color: blue;
+  text-decoration: underline;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+
+.main-page-logo {
+  margin-bottom: 2dvh;
+}
+
+
+.not-band-member {
+  justify-content: center;
+  text-align: center;
+  margin-top: 30dvh;
+}
+
+
+/* HTML: <div class="loader"></div> */
+.general-loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  padding: 3px;
+  background: 
+    radial-gradient(farthest-side,#ffa516 95%,#0000) 50% 0/12px 12px no-repeat,
+    radial-gradient(farthest-side,#0000 calc(100% - 5px),#ffa516 calc(100% - 4px)) content-box;
+  animation: l6 2s infinite ;
+}
+@keyframes l6 {to{transform: rotate(1turn)}}
+
+
 
 @media only screen and (max-width: 1024px) {
   .footer {
